include $(top_srcdir)/build.common

AM_FFLAGS = -DZBSVER=@NEUT_VERSION_NUM@ $(DEFAULT_FFLAGS)

LIBNAME = libzbs.@NEUT_VERSION_NUM@.a

noinst_LIBRARIES = $(LIBNAME)

libzbs_@NEUT_VERSION_NUM@_a_SOURCES = kzaddn.F kzbcr0.F kzbcr1.F kzbcr2.F kzbcr3.F kzbcre.F \
									kzbdel.F kzbloc.F kzbtyp.F kzchg0.F kzcldt.F kzcmpn.F \
									kzcrb0.F kzcrb1.F kzcrb2.F kzcrb3.F kzcrd0.F kzcrd1.F \
									kzcrd2.F kzcrd3.F kzcreh.F kzcrem.F	kzcrmh.F kzddiv.F \
									kzdevt.F kzdsev.F kzdsto.F kzdtab.F kzeclr.F kzecur.F \
									kzefst.F kzejmp.F kzelst.F kzemrg.F kzemrk.F kzend.F \
									kzenew.F kzenum.F kzenxt.F kzeprv.F kzexb0.F kzexb1.F \
									kzexb2.F kzexdi.F kzexdr.F kzfile.F kzform.F kzget.F \
									kzget0.F kzget1.F kzget2.F kzgeth.F kzinit.F kziofm.F \
									kzleng.F kzlimit.F kzlseg.F kzldat.F kzlogl.F kzmcur.F \
									kzmfst.F kzmjmp.F kzmkdt.F kzmlst.F kzmnum.F kzmnxt.F \
									kzmprv.F kzname.F kznseg.F kznsg0.F kznssg.F kzoptn.F \
									kzpdir.F kzput0.F kzput1.F kzput2.F kzputh.F kzread.F \
									kzrep0.F kzrep1.F kzrep2.F kzwpos.F kzwps2.F kzwrit.F \
									kzctoi.F kzitoc.F kzreda.F msgout.F


# Unused sources that live in the directory
UNUSED_srcs =
