include $(top_srcdir)/build.common

AM_FFLAGS = $(DEFAULT_FFLAGS)

bin_PROGRAMS = makeEffSFTables makeSFTables

SPECFUNC_PROGLDADD = $(NEUT_STATIC_LIBS) $(CERN_LIBS) $(ROOT_LIBS) $(EXE_RTLIBS)
SPECFUNC_PROGLDFLAGS = $(EXE_LINKFLAGS) $(CERN_LINKFLAGS) $(ROOT_LINKFLAGS)

makeEffSFTables_SOURCES = makeEffSFTables.F
makeEffSFTables_LDADD = $(SPECFUNC_PROGLDADD)
makeEffSFTables_LDFLAGS = $(SPECFUNC_PROGLDFLAGS)
makeEffSFTables_DEPENDENCIES = $(NEUT_STATIC_LIBS)

makeSFTables_SOURCES = makeTables.F
makeSFTables_LDADD = $(SPECFUNC_PROGLDADD)
makeSFTables_LDFLAGS = $(SPECFUNC_PROGLDFLAGS)
makeSFTables_DEPENDENCIES = $(NEUT_STATIC_LIBS)
