include $(top_srcdir)/build.common

AM_CXXFLAGS = $(DEFAULT_CXXFLAGS) $(NEUT_CLASS_INCLUDES) $(NEUT_REWEIGHT_INCLUDES)


bin_PROGRAMS = EventSplines

SPECFUNC_PROGLDADD = $(NEUT_REWEIGHT_LIBS) $(NEUT_LIBS) $(CERN_LIBS) $(ROOT_LIBS) $(EXE_RTLIBS)
SPECFUNC_PROGLDFLAGS = $(EXE_LINKFLAGS) $(CERN_LINKFLAGS) $(ROOT_LINKFLAGS)

EventSplines_SOURCES = EventSplines.cc
EventSplines_LDADD = $(SPECFUNC_PROGLDADD)
EventSplines_LDFLAGS = $(SPECFUNC_PROGLDFLAGS)
EventSplines_DEPENDENCIES = $(NEUT_LIBS)