include $(top_srcdir)/build.common

AM_CXXFLAGS = $(DEFAULT_CXXFLAGS) $(NEUT_CLASS_INCLUDES) $(NEUT_REWEIGHT_INCLUDES)


bin_PROGRAMS = EventSplines FlatTree Reweight_test

NEUTRWUTILS_PROGLDADD = $(NEUT_REWEIGHT_LIBS) $(NEUT_LIBS) $(CERN_LIBS) $(ROOT_LIBS) $(EXE_RTLIBS)
NEUTRWUTILS_PROGLDFLAGS = $(EXE_LINKFLAGS) $(CERN_LINKFLAGS) $(ROOT_LINKFLAGS)

EventSplines_SOURCES = EventSplines.cc
EventSplines_LDADD = $(NEUTRWUTILS_PROGLDADD)
EventSplines_LDFLAGS = $(NEUTRWUTILS_PROGLDFLAGS)
EventSplines_DEPENDENCIES = $(NEUT_LIBS)

FlatTree_SOURCES = FlatTree.cc
FlatTree_LDADD = $(NEUTRWUTILS_PROGLDADD)
FlatTree_LDFLAGS = $(NEUTRWUTILS_PROGLDFLAGS)
FlatTree_DEPENDENCIES = $(NEUT_LIBS)

Reweight_test_SOURCES = Reweight_test.cc
Reweight_test_LDADD = $(NEUTRWUTILS_PROGLDADD)
Reweight_test_LDFLAGS = $(NEUTRWUTILS_PROGLDFLAGS)
Reweight_test_DEPENDENCIES = $(NEUT_LIBS)